# faker-rs

./: .travis.yml  Cargo.toml  README.md
examples/: all.rs
src/: address.rs  faker.rs  helpers.rs  image.rs  lib.rs  lorem.rs  main.rs  name.rs  number.rs  phone_number.rs
src/faker/: mod.rs
src/helpers/: mod.rs  tests.rs
src/image/: mod.rs  tests.rs
src/locale/: en.rs  mod.rs
src/lorem/: mod.rs  tests.rs
src/name/: mod.rs  tests.rs
src/number/: mod.rs  tests.rs
src/phone_number/: mod.rs  tests.rs
src/phone_numbers/: mod.rs  tests.rs
src/random/: mod.rs  tests.rs
tests/: helpers.rs  image.rs  lib.rs  lorem.rs  name.rs  number.rs  phone_number.rs
