[package]

name = "faker"
version = "0.0.4"
authors = [
    "Mordy Tikotzky <mordytk@gmail.com>",
    "Seth Pollack <teampollack@gmail.com>",
    "Nathan Lilienthal <nathan@nixpulvis.com>",
]
homepage = "https://github.com/tikotzky/faker-rs"
repository = "https://github.com/tikotzky/faker-rs"
license = "MIT/Apache-2.0"
description = "A library for generating fake data such as names, addresses, and phone numbers."

[dependencies]
rand = "0.3"

[dev-dependencies]
regex = "0.1"

[[bin]]
name = "faker"
doc = false
